Fix avatar spacing on the event previews on homepage

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -700,6 +700,8 @@ input[type="radio"], input[type="checkbox"]
       margin-top: -35px
     .title-boxlink
       margin-top: 5px
+    .box img.avatar, .box .emptyimg.avatar
+      margin-right: 0px
   #mission
     .well
       background: #FFF
